# github-notifier-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
bot/: __main__.py
bot/config/: channels.py  settings.py
bot/core/: logger.py
bot/filters/: dependabot.py
bot/models/: config.py  events.py
bot/services/: batcher.py  dedup.py  formatter.py  router.py  telegram.py
bot/webhook/: app.py  handlers.py  health.py  signature.py
tests/: conftest.py  test_dedup.py  test_formatter.py  test_router.py  test_signature.py
